--- a/src/200.html
+++ b/src/200.html
@@ -3,10 +3,7 @@
   <head>
     <title>Gif Weather</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:300,400,500,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="main">Loading</div>
