--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
   <head>
     <title>Gif Weather</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:300,400,500,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/29d03f7f6d.js"></script>
   </head>
   <body>
     <div id="main">Loading</div>
